changed css for <body> & <main> to fix content getting cutted off on small screen

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -16,28 +16,25 @@
     box-sizing: border-box;
 }
 
-body { 
-    height: 100vh;
-    margin-top: 0;
-    margin-bottom: 0;
+body { /* Left & right spacing is left & right from default body margin + 12px */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 91vh;
+    margin-top: 4.5vh;
+    margin-bottom: 4.5vh;
     padding: var(--unit-two);
     font-size: var(--font-size-main);
+    text-align: center;
 }
 
 main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: calc(100% - 9vh);
     width: 100%;
-    margin: 4.5vh auto;
-    text-align: center;
+	max-width: 23.125rem;
 }
 
 #roomba-cat {
 	width: 100%;
-	max-width: 23.125rem;
 }
 
 .__layer-one,
